user pages and index.html

--- a/index.html
+++ b/index.html
@@ -95,28 +95,97 @@
             <ul>
 
               <!-- Begin Student -->
-              <li class="home-blog-post">
-                <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
-                  </a>
-                </div>
+              <!-- Begin Student -->
+       <li class="home-blog-post">
+         <div class="blog-thumb">
+           <a href="students/david-tannenbaum.html">
+             <img width="304" height="304" class="prof-image" src="img/students/david_tannenbaum_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="david_tannenbaum">
+           <a href="students/student_name.html">
+             <img width="304" height="304" class="prof-image" src="img/students/diego_image_2.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+           </a>
+         </div>
+         <div class="blog-title">
+           <div class="big-comment">
+             <h3>
+               <a href="students/david-tannenbaum.html">David Tannenbaum</a>
 
-                <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>
-                      <a href="students/student_name.html">Student Name</a>
-                    </h3>
-                  </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
-                </div>
-                <div class="clear"></div>
+             </h3>
+           </div>
+           <p class="home-blog-post-meta">COMPILE!</p>
+         </div>
+         <div class="clear"></div>
+         <div class="excerpt">
+           <p>David is awesome.</p>
+         </div>
+         <div class="clear"></div>
+       </li>
 
-                <div class="excerpt">
-                  <p>Excerpt.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
+       <li class="home-blog-post">
+                     <div class="blog-thumb">
+                       <a href="students/diego-dorado.html">
+                         <img width="304" height="304" class="prof-image" src="img/students/diego_image_2.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                       </a>
+                     </div>
+                     <div class="blog-title">
+                       <div class="big-comment">
+                         <h3>
+                           <a href="students/diego-dorado.html">Diego Dorado</a>
+                         </h3>
+                       </div>
+                       <p class="home-blog-post-meta">Tag Line</p>
+                     </div>
+                     <div class="clear"></div>
+                     <div class="excerpt">
+                       <p>Excerpt.</p>
+                     </div>
+                     <div class="clear"></div>
+                   </li>
+
+                   <!-- Begin Student -->
+        <li class="home-blog-post">
+          <div class="blog-thumb">
+            <a href="students/danielle-bennett.html">
+              <img width="304" height="304" class="prof-image" src="img/students/danielle_bennett_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+            </a>
+          </div>
+          <div class="blog-title">
+            <div class="big-comment">
+              <h3>
+                <a href="students/danielle-bennett.html">Danielle Bennett</a>
+              </h3>
+            </div>
+            <p class="home-blog-post-meta">-____-</p>
+          </div>
+          <div class="clear"></div>
+          <div class="excerpt">
+            <p>Danielle is a web development student and salt and vinegar chip enthusiast.</p>
+          </div>
+          <div class="clear"></div>
+        </li>
+        <!-- End Student -->
+        <div class="blog-thumb">
+              <a href="students/natalie-dean.html">
+                <img width="304" height="304" class="prof-image" src="img/students/natalie_image_3.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+              </a>
+            </div>
+            <div class="blog-title">
+              <div class="big-comment">
+                <h3>
+                  <a href="students/natalie-dean.html">Natalie Dean</a>
+                </h3>
+              </div>
+              <p class="home-blog-post-meta">make a good tagline for me</p>
+            </div>
+            <div class="clear"></div>
+            <div class="excerpt">
+              <p>Excerpt.</p>
+            </div>
+            <div class="clear"></div>
+          </li>
+        <!-- Begin Student -->
+
+              <!-- End Student -->
+       <!-- End Student -->
               <!-- End Student -->
 
               <!-- Duplicate li code block above to place more students here -->
