--- a/students/diego-dorado.html
+++ b/students/diego-dorado.html
@@ -10,7 +10,7 @@
   <link rel='stylesheet' href="../css/style.css" type='text/css' media='all' />
   <style>
     .top-page-title {
-      background: url(../img/students/diego_image_1.jpg) no-repeat top center;
+      background: url(../img/students/diego_image_1.JPG) no-repeat top center;
     }
   </style>
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
