--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
          <div class="blog-thumb">
            <a href="students/david-tannenbaum.html">
              <img width="304" height="304" class="prof-image" src="img/students/david_tannenbaum_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="david_tannenbaum">
-          
+
          </div>
          <div class="blog-title">
            <div class="big-comment">
@@ -121,7 +121,7 @@
        <li class="home-blog-post">
                      <div class="blog-thumb">
                        <a href="students/diego-dorado.html">
-                         <img width="304" height="304" class="prof-image" src="img/students/diego_image_2.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                         <img width="304" height="304" class="prof-image" src="img/students/diego_image_2.JPG" class="attachment-blog-thumb wp-post-image" alt="student_name">
                        </a>
                      </div>
                      <div class="blog-title">
