--- a/students/diego-dorado.html
+++ b/students/diego-dorado.html
@@ -87,7 +87,7 @@
       <!-- Begin Splash Image -->
       <div class="top-page-title">
         <div>
-          <img src="../img/students/diego_image_3.jpg" class="student_pic">
+          <img src="../img/students/diego_image_3.JPG" class="student_pic">
         </div>
       </div>
       <! -- End Splash Image -->
